--- a/head.html
+++ b/head.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-GB">
 <head>
-
-
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <meta name="robots" content="index, follow">
@@ -10,13 +8,8 @@
 <link rel="icon" href="/favicon.png" type="image/png">
 <link rel="canonical" href="https://homerepairs4u.com/head.html">
 <meta name="description" content="Looking for trusted guttering services in Ackworth Doncaster? From gutter clearing to repairs and replacement, get fast, reliable results. Request your instant online quote today.">
-<link rel="preload" as="image" href="/images/home-repairs-4u-doncaster.webp" />
+
 <style>
-h1 {
-font-size: 2em; /* adjusts size for readability */
-text-align: center;
-margin-bottom: 20px;
-} 
 /* HEADER STYLING */
 header{
 text-align:center;
@@ -69,121 +62,10 @@ margin-top: 15px;
 color: white;
 margin: 0 10px;
 }
- /* LIGHTBOX STYLING */
-.lightbox {
-display: none; /* Hidden by default */
-position: fixed; /* Stay in place */
-top: 0;
-left: 0;
-width: 100%;
-height: 100%;
-background: rgba(0, 0, 0, 0.8); /* Semi-transparent black overlay */
-justify-content: center; /* Center the image horizontally */
-align-items: center; /* Center the image vertically */
-z-index: 9999; /* On top of everything */
-cursor: pointer; /* Click to close */
-flex-direction: column; /* For image + close button vertically */
-}
-
-.lightbox img {
-max-width: 90%;
-max-height: 90%;
-box-shadow: 0 0 20px rgba(0,0,0,0.5);
-}
-
-.lightbox span {
-position: absolute;
-top: 20px;
-right: 30px;
-color: white;
-font-size: 40px;
-font-weight: bold;
-cursor: pointer;
-user-select: none;
-}
-.header-buttons {
-display: flex;
-flex-direction: column;
-align-items: center;
-gap: 10px;
-}
-.main-nav {
-background: #000;
-border-bottom: 3px solid #27ae60;
-font-family: sans-serif;
-}
-
-.main-nav ul {
-list-style: none;
-margin: 0;
-padding: 0;
-}
-
-.menu {
-display: flex;
-justify-content: center;
-}
-
-.menu > li {
-position: relative;
-}
-
-.menu a {
-display: block;
-padding: 14px 22px;
-color: #fff;
-text-decoration: none;
-font-weight: 600;
-}
-
-.menu a:hover {
-background: #333;
-}
-
-/* DROPDOWN */
-.submenu {
-display: none;
-position: absolute;
-top: 100%;
-left: 0;
-background: #000;
-min-width: 200px;
-z-index: 1000;
-}
-
-.has-submenu:hover .submenu {
-display: block;
-}
-
-.submenu a {
-padding: 12px 18px;
-color: #fff;
-}
-
-/* MOBILE */
-@media (max-width: 768px) {
-.menu {
-flex-direction: column;
-}
-
-.submenu {
-position: static;
-display: none; /* hidden by default */
-}
-
-.submenu-toggle::after {
-content: " ▼";
-}
-}
-
-/* MOBILE CLICK TOGGLE */
-@media (max-width: 768px) {
-.submenu-toggle {
-cursor: pointer;
-}
-}
 </style>
- 
+</head>
+<body>
+
 <!-- ✅ HEADER -->
 <header>
 <img src="/images/home-repairs-4u-doncaster.webp"
@@ -202,221 +84,11 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 <a href="tel:07735873694" class="call-btn" aria-label="Call Home Repairs 4U on 07735 873694">📞 Call Now: 07735 873694</a>
 <a href="https://homerepairs4u.com/quote-calculator/guttering.html" class="call-btn" aria-label="Get a Quote for Guttering Services">📝 Get Instant Quote</a>
 </header>
-<nav class="main-nav" aria-label="Main navigation">
-<ul class="menu">
-<li class="has-submenu">
-<a href="#" class="submenu-toggle">Services</a>
-<ul class="submenu">
-<li><a href="/local/pressure-washing-ackworth.html">Pressure Washing</a></li>
-<li><a href="/local/guttering-ackworth.html">Guttering Services</a></li>
-<li><a href="/contact.html">Contact</a></li>
-</ul>
-</li>
-</ul>
-</nav>
-
- <!-- ✅ MAIN CONTENT -->
-<main style="max-width:1200px; margin:30px auto; padding:0 15px;">
-
-<!-- Section 1 -->
-<section style="margin-bottom:40px; text-align:center;">
-<h1>Guttering Services in Ackworth Doncaster</h1>
-<h2>Reliable, local solutions that protect your home all year round</h2>
-<p>
-Our professional <strong>guttering services in Ackworth Doncaster</strong> are designed to protect your property from water damage, damp, and structural issues caused by blocked or failing gutters. We work with homeowners and landlords across Ackworth Doncaster, delivering dependable solutions that keep rainwater flowing safely away from roofs and foundations. Using specialist equipment and proven techniques, our team provides thorough inspections and practical advice alongside every service. From routine maintenance to urgent callouts, our local guttering services focus on long-term protection, safety, and peace of mind. We understand the challenges of UK weather and tailor every job to suit your property, ensuring gutters perform efficiently in every season.
-</p>
-<p>
-Choosing local <strong>guttering services in Ackworth Doncaster</strong> means working with a team that understands the area, building styles, and common drainage issues. We pride ourselves on punctual arrivals, clear communication, and honest pricing with no hidden extras. Every job is carried out with care, whether it involves a small residential property or a larger commercial building. Our goal is to deliver reliable results that homeowners can trust, backed by experience and attention to detail.
-</p>
-<p>
-If you want dependable <strong>guttering services in Ackworth Doncaster</strong>, we make the process simple. From your first enquiry to completion, everything is handled efficiently. You can even request an instant online quote, making it easier than ever to protect your property without delays or stress.
-</p>
-<img src="/images/gutter-clearing.webp"
-alt="Professional guttering services in Ackworth Doncaster protecting residential properties"
-style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
-onclick="openLightbox(this.src, this.alt)"
-tabindex="0"
-onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
-</section>
-
-<!-- Section 2 -->
-<section style="margin-bottom:40px; text-align:center;">
-<h2>Gutter Clearing</h2>
-<h3>Safe and effective removal of debris and blockages</h3>
-<p>
-Our <strong>gutter clearing service in Ackworth Doncaster</strong> removes leaves, moss, and built-up debris that can cause overflows and water damage. Blocked gutters are one of the most common causes of damp problems, especially during heavy rainfall. Using specialist vacuum systems and safe access methods, we clear gutters thoroughly without mess. This service is a key part of our guttering services, helping properties in Ackworth Doncaster stay protected throughout the year while reducing the risk of costly repairs later.
-</p>
-<p>
-Regular <strong>gutter clearing in Ackworth Doncaster</strong> helps extend the lifespan of your guttering system and prevents strain on joints and fixings. We recommend scheduled maintenance for homes surrounded by trees or exposed to frequent storms. Our team checks downpipes, outlets, and connections as part of the service, ensuring water flows freely away from your property every time it rains.
-</p>
-<p>
-As part of our trusted guttering services, <strong>gutter clearing in Ackworth Doncaster</strong> is fast, affordable, and highly effective. You receive clear feedback after completion, so you always know the condition of your gutters.
-</p>
-<img src="/images/cleaned-gutters-before-after.webp"
-alt="Gutter clearing service in Ackworth Doncaster removing leaves and debris"
-style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
-onclick="openLightbox(this.src, this.alt)"
-tabindex="0"
-onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
-</section>
-
-<!-- Section 3 -->
-<section style="margin-bottom:40px; text-align:center;">
-<h2>Guttering Repairs</h2>
-<h3>Restoring performance and preventing further damage</h3>
-<p>
-Our <strong>guttering repairs in Ackworth Doncaster</strong> address leaks, sagging sections, loose brackets, and damaged joints before they turn into bigger problems. Faulty gutters can cause water to run down walls, leading to staining, damp, and even foundation issues. As part of our comprehensive guttering services, we carefully assess the damage and carry out targeted repairs using durable materials. This approach saves money and restores full functionality without unnecessary replacement, keeping your property protected in all weather conditions.
-</p>
-<p>
-Homeowners across Ackworth Doncaster trust our <strong>guttering services</strong> because we focus on practical, long-lasting solutions. Guttering repairs are completed efficiently, with minimal disruption to your day. We work on all common gutter types and ensure repairs blend seamlessly with existing systems for a neat, professional finish.
-</p>
-<p>
-If you notice drips, overflowing sections, or visible damage, our <strong>guttering repairs in Ackworth Doncaster</strong> provide a reliable fix. Early action helps avoid expensive structural repairs later.
-</p>
-<img src="/images/gutter-repairs.webp"
-alt="Expert guttering repairs in Ackworth Doncaster fixing leaks and joints"
-style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
-onclick="openLightbox(this.src, this.alt)"
-tabindex="0"
-onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
-</section>
-
-<!-- Section 4 -->
-<section style="margin-bottom:40px; text-align:center;">
-<h2>Gutter Replacement</h2>
-<h3>Modern systems built for durability and performance</h3>
-<p>
-When repairs are no longer enough, our <strong>gutter replacement service in Ackworth Doncaster</strong> offers a complete upgrade for your property. Old or severely damaged gutters can fail without warning, putting walls, roofs, and foundations at risk. Our guttering services include full system replacement using high-quality materials designed to withstand the British climate. We remove existing guttering safely and install new systems with precise alignment for optimal water flow and long-term reliability.
-</p>
-<p>
-<strong>Gutter replacement in Ackworth Doncaster</strong> improves both performance and appearance. Modern guttering systems are more efficient and require less maintenance over time. We help you choose the right style and material to suit your property, ensuring the finished result looks clean, professional, and built to last.
-</p>
-<p>
-With our trusted guttering services, <strong>gutter replacement in Ackworth Doncaster</strong> is straightforward, transparent, and completed to high standards you can rely on.
-</p>
-<img src="/images/gutter-alignment.webp"
-alt="New gutter replacement installation on a home in Ackworth Doncaster"
-style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
-onclick="openLightbox(this.src, this.alt)"
-tabindex="0"
-onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
-</section>
-
-<!-- Section 5 -->
-<section style="margin-bottom:40px; text-align:center;">
-<h2>Trusted Local Guttering Services</h2>
-<h3>Book today with confidence and local expertise</h3>
-<p>
-For dependable <strong>guttering services in Ackworth Doncaster</strong>, our local team delivers quality, reliability, and excellent customer care every step of the way. From gutter clearing and cleaning to repairs and full replacement, we tailor every service to your property’s needs. We are proud to serve the Ackworth Doncaster community with honest advice, professional workmanship, and clear pricing. Protecting your home starts with effective guttering, and our experienced team is here to help. Contact us today to arrange your service or request your instant online quote and enjoy peace of mind knowing your property is in safe hands.
-</p>
-<p>
-We offer quotes for all our exterior cleaning services, including pressure washing, patio cleaning, and gutter maintenance.
-To get a quote specifically for pressure washing in Ackworth, visit our
-<a href="https://homerepairs4u.com/local/pressure-washing-ackworth.html" title="Professional Pressure Washing  Services in Ackworth">Ackworth Pressure Cleaning Service page</a>.
-</p>
-<div class="lightbox" id="lightbox" role="dialog" aria-modal="true" aria-labelledby="lightboxImg">
-<button class="lightbox-close" onclick="closeLightbox()" aria-label="Close lightbox">×</button>
-<img id="lightboxImg" src="" alt="">
-</div>
-<img src="/images/gutter-cleaning.webp"
-alt="Local guttering services team working on a property in Ackworth Doncaster"
-style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
-onclick="openLightbox(this.src, this.alt)"
-tabindex="0"
-onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
-</section>
-
-<!-- ✅ BOTTOM CALL BUTTON -->
-<div style="text-align:center; margin:40px 0;">
-<a href="tel:07735873694" class="call-btn" aria-label="Call Home Repairs 4U on 07735 873694">📞 Call Now: 07735 873694</a>
-</div>
-
-</main>
 
 <!-- ✅ FOOTER -->
 <footer class="site-footer">
 © Home Repairs 4U | Askern DN6 | Call 07735 873694
-
-
 </footer>
- 
-<script type="application/ld+json">
-{
-"@context": "https://schema.org",
-"@type": "LocalBusiness",
-"name": "Home Repairs 4U",
-"image": "https://homerepairs4u.com/images/home-repairs-4u-doncaster.webp",
-"url": "https://homerepairs4u.com/guttering-services/ackworth.html",
-"telephone": "+44-07735-873694",
-"priceRange": "££",
-"address": {
-"@type": "PostalAddress",
-"streetAddress": "35 Airstone Road",
-"addressLocality": "Askern",
-"addressRegion": "Doncaster",
-"postalCode": "DN6 0QA",
-"addressCountry": "GB"
-},
-"geo": {
-"@type": "GeoCoordinates",
-"latitude": 53.6566,
-"longitude": -1.3342
-},
-"areaServed": "Ackworth",
-"openingHoursSpecification": [
-{
-"@type": "OpeningHoursSpecification",
-"dayOfWeek": [
-"Monday","Tuesday","Wednesday","Thursday","Friday","Saturday","Sunday"
-],
-"opens": "00:00",
-"closes": "23:59"
-}
-],
-"sameAs": [
-"https://www.facebook.com/profile.php?id=61584395621256"
-]
-}
-</script>
 
-<!-- ✅ LIGHTBOX SCRIPT -->
-<script>
-function openLightbox(src, alt){
-const lightbox = document.getElementById("lightbox");
-const lightboxImg = document.getElementById("lightboxImg");
-
-lightbox.style.display = "flex"; // show lightbox
-lightboxImg.src = src; // set the image
-lightboxImg.alt = alt; // ✅ set alt dynamically
-}
-
-function closeLightbox(){
-document.getElementById("lightbox").style.display = "none";
-}
-
-// Optional: close lightbox with Esc key
-document.addEventListener('keydown', function(event) {
-const lightbox = document.getElementById('lightbox');
-if (event.key === "Escape" && lightbox.style.display === "flex") {
-lightbox.style.display = "none";
-}
-});
-</script>
-<script>
-document.addEventListener('DOMContentLoaded', function() {
-const toggles = document.querySelectorAll('.submenu-toggle');
-toggles.forEach(function(toggle) {
-toggle.addEventListener('click', function(e) {
-e.preventDefault();
-const submenu = this.nextElementSibling;
-if(submenu.style.display === 'block') {
-submenu.style.display = 'none';
-} else {
-submenu.style.display = 'block';
-}
-});
-});
-});
-</script>
 </body>
 </html>
