--- a/quote-calculator/fencing.html
+++ b/quote-calculator/fencing.html
@@ -12,21 +12,25 @@ background: #f4f7f8;
 padding: 30px;
 margin: 0;
 }
-h1 {
-text-align: center;
-margin-bottom: 10px;
+h1 { text-align: center; margin-bottom: 10px; }
+.intro { text-align: center; margin-bottom: 20px; font-size: 16px; color: #555; }
+.calc-button, .view-image-button, .quote-button, .close-button {
+cursor: pointer;
+border: none;
+border-radius: 8px;
+transition: 0.3s;
 }
-.intro {
-text-align: center;
-margin-bottom: 40px;
-font-size: 16px;
-color: #555;
-}
-.calculators-grid {
-display: grid;
-grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-gap: 30px;
-}
+.calc-button { background: #ff6b6b; color: white; padding: 10px 20px; margin-bottom: 20px; }
+.calc-button:hover { background: #ff4757; }
+.view-image-button { background: #1e90ff; color: white; padding: 6px 12px; }
+.view-image-button:hover { background: #0077cc; }
+.quote-button { margin-top: 20px; width: 100%; background: #1e90ff; color: white; padding: 10px; }
+.quote-button:hover { background: #0077cc; }
+.close-button { margin-top: 10px; width: 100%; background: #888; color: white; padding: 8px; }
+.close-button:hover { background: #555; }
+
+.calculators-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(400px, 1fr)); gap: 30px; }
+
 .calc-container {
 position: relative;
 border-radius: 12px;
@@ -51,6 +55,7 @@ border-radius: 12px;
 z-index: 0;
 }
 .calc-container > * { position: relative; z-index: 1; }
+
 .calc-title {
 display: flex;
 justify-content: space-between;
@@ -59,25 +64,7 @@ font-weight: 600;
 font-size: 18px;
 flex-wrap: wrap;
 }
-.view-image-button, .calc-button, .quote-button, .close-button {
-cursor: pointer;
-border: none;
-border-radius: 8px;
-transition: 0.3s;
-}
-.view-image-button {
-background: #1e90ff;
-color: white;
-padding: 6px 12px;
-}
-.view-image-button:hover { background: #0077cc; }
-.calc-button {
-background: #ff6b6b;
-color: white;
-padding: 10px 20px;
-margin-top: 10px;
-}
-.calc-button:hover { background: #ff4757; }
+
 .calculator {
 display: none;
 margin-top: 15px;
@@ -88,56 +75,13 @@ box-sizing: border-box;
 color: #2a2f45;
 }
 label { display: block; margin-top: 15px; }
-input, select {
-width: 100%;
-padding: 8px;
-margin-top: 5px;
-font-size: 16px;
-}
-.quote-button {
-margin-top: 20px;
-width: 100%;
-background: #1e90ff;
-color: white;
-padding: 10px;
-}
-.quote-button:hover { background: #0077cc; }
-.close-button {
-margin-top: 10px;
-width: 100%;
-background: #888;
-color: white;
-padding: 8px;
-}
-.close-button:hover { background: #555; }
-.result {
-margin-top: 20px;
-background: #eef6ff;
-padding: 15px;
-border-radius: 8px;
-font-size: 16px;
-line-height: 1.5;
-}
-.highlight {
-font-weight: bold;
-color: #ff4757;
-}
-.image-modal {
-display: none;
-position: fixed;
-z-index: 999;
-left: 0; top: 0;
-width: 100%;
-height: 100%;
-background: rgba(0,0,0,0.8);
-}
-.image-modal img {
-display: block;
-margin: 5% auto;
-max-width: 80%;
-max-height: 300px;
-border-radius: 10px;
-}
+input, select { width: 100%; padding: 8px; margin-top: 5px; font-size: 16px; }
+.result { margin-top: 20px; background: #eef6ff; padding: 15px; border-radius: 8px; font-size: 16px; line-height: 1.5; }
+.highlight { font-weight: bold; color: #ff4757; }
+
+.image-modal { display: none; position: fixed; z-index: 999; left: 0; top: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.8); }
+.image-modal img { display: block; margin: 5% auto; max-width: 80%; max-height: 300px; border-radius: 10px; }
+
 @media (max-width: 768px) {
 body { padding: 10px; }
 h1 { font-size: 24px; }
@@ -151,12 +95,18 @@ input, select { font-size: 16px; }
 <body>
 
 <h1>Get Your Fence Quote</h1>
-<p class="intro">Select your fence type below, view the style, and generate your instant quote.</p>
+<p class="intro">Click the button below to view all fencing options and generate your instant quote.</p>
 
+<!-- Single button to show all cards -->
+<button class="calc-button" onclick="showAllCards()">View Options</button>
+
+<!-- Container holding all fence cards, hidden initially -->
+<div id="allCards" style="display:none;">
 <div class="calculators-grid" id="calculators"></div>
+</div>
 
 <script>
-// Fence types and background images
+// Fence types, background images, and panel prices
 const fences = [
 { name: "Closeboard Featheredge Fence", img: "/images/closeboard.webp", prices:{4:22,5:27,6:32} },
 { name: "Double Side Hit Miss", img: "/images/double-hit-miss.webp", prices:{4:24,5:29,6:34} },
@@ -168,6 +118,7 @@ const fences = [
 
 const container = document.getElementById("calculators");
 
+// Generate all fence cards dynamically
 fences.forEach((fence,i)=>{
 const id = i+1;
 container.innerHTML += `
@@ -202,22 +153,35 @@ ${fence.name}
 `;
 });
 
-// Toggle calculator
-function toggleCalculator(id){ const el=document.getElementById(id); el.style.display=(el.style.display==="block")?"none":"block"; }
-// Image modal
+// Show all cards when button pressed
+function showAllCards(){
+document.getElementById("allCards").style.display = "block";
+document.getElementById("allCards").scrollIntoView({behavior:"smooth"});
+}
+
+// Toggle individual calculator
+function toggleCalculator(id){
+const el = document.getElementById(id);
+el.style.display = (el.style.display==="block") ? "none" : "block";
+}
+
+// Image modal functions
 function openImage(id){ document.getElementById(id).style.display="block"; }
 function closeImage(el){ el.style.display="none"; }
 
 // Quote calculation with Call Now button
 function calculateQuote(id){
 let lengthInput = parseFloat(document.getElementById("length"+id).value);
-if(isNaN(lengthInput)||lengthInput<=0){ document.getElementById("result"+id).innerHTML="Enter a valid fence length."; return; }
+if(isNaN(lengthInput)||lengthInput<=0){
+document.getElementById("result"+id).innerHTML="Enter a valid fence length.";
+return;
+}
 let height = document.getElementById("height"+id).value;
 let gate = parseInt(document.getElementById("gate"+id).value);
 let length = lengthInput;
 
 const panelWidth=1.8;
-const panelPrices = fences[id-1].prices; // use fence-specific prices
+const panelPrices = fences[id-1].prices;
 const gravelPrice=17;
 const postPrice=17;
 const postMixPrice=6;
