--- a/quote-calculator/fencing.html
+++ b/quote-calculator/fencing.html
@@ -5,101 +5,52 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Quote Calculators</title>
 <link rel="canonical" href="https://homerepairs4u.com/quote-calculator/">
-
 <style>
-body {
-font-family: 'Montserrat', sans-serif;
-background: #f4f7f8;
-padding: 30px;
-margin: 0;
-}
-
+body { font-family: 'Montserrat', sans-serif; background: #f4f7f8; padding: 30px; margin: 0; }
 h1 { text-align: center; margin-bottom: 10px; }
 .intro { text-align: center; margin-bottom: 20px; font-size: 16px; color: #555; }
 
-.calc-button, .quote-button, .close-button {
-cursor: pointer;
-border: none;
-border-radius: 8px;
-transition: 0.3s;
+.calc-button, .view-image-button, .quote-button, .close-button {
+cursor: pointer; border: none; border-radius: 8px; transition: 0.3s;
 }
-
 .calc-button { background: #ff6b6b; color: white; padding: 10px 20px; margin-bottom: 20px; }
 .calc-button:hover { background: #ff4757; }
-
+.view-image-button { background: #1e90ff; color: white; padding: 6px 12px; margin-bottom: 5px; }
+.view-image-button:hover { background: #0077cc; }
 .quote-button { margin-top: 20px; width: 100%; background: #1e90ff; color: white; padding: 10px; }
 .quote-button:hover { background: #0077cc; }
-
 .close-button { margin-top: 10px; width: 100%; background: #888; color: white; padding: 8px; }
 .close-button:hover { background: #555; }
 
-.calculators-grid {
-display: grid;
-grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-gap: 30px;
-}
-
-.calc-container {
-position: relative;
-border-radius: 12px;
-min-height: 350px;
-display: flex;
-flex-direction: column;
-justify-content: flex-end;
-color: #fff;
-padding: 20px;
-box-shadow: 0 8px 20px rgba(0,0,0,0.08);
-background-size: cover;
-background-position: center;
-overflow: hidden;
-}
-
-.calc-container::before {
-content: '';
-position: absolute;
-top: 0; left: 0;
-width: 100%; height: 100%;
-background: rgba(0,0,0,0.4);
-border-radius: 12px;
-z-index: 0;
-}
-
+.calculators-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(350px, 1fr)); gap: 30px; }
+.calc-container { position: relative; border-radius: 12px; min-height: 350px; display: flex; flex-direction: column; justify-content: flex-end; color: #fff; padding: 20px; background-size: cover; background-position: center; overflow: hidden; box-shadow: 0 8px 20px rgba(0,0,0,0.1); }
+.calc-container::before { content: ''; position: absolute; inset: 0; background: rgba(0,0,0,0.4); z-index: 0; }
 .calc-container > * { position: relative; z-index: 1; }
 
-.calculator {
-display: none;
-margin-top: 15px;
-padding: 20px;
-border-radius: 12px;
-background: #fff;
-box-sizing: border-box;
-color: #2a2f45;
-}
-
+.calculator { display: none; margin-top: 15px; padding: 20px; border-radius: 12px; background: #fff; color: #2a2f45; }
 label { display:block; margin-top:15px; }
 input, select { width:100%; padding:8px; margin-top:5px; }
 
-.result {
-margin-top:20px;
-background:#eef6ff;
-padding:15px;
-border-radius:8px;
-font-size:16px;
-line-height:1.5;
-}
-
+.result { margin-top:20px; background:#eef6ff; padding:15px; border-radius:8px; }
 .highlight { font-weight:bold; color:#ff4757; }
-
+.image-modal { display: none; position: fixed; z-index: 999; left: 0; top: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.8); }
+.image-modal img { display: block; margin: 5% auto; max-width: 80%; max-height: 300px; border-radius: 10px; }
 hr { margin:60px 0; }
+
+@media (max-width: 768px) {
+body { padding: 10px; }
+h1 { font-size: 24px; }
+.calculators-grid { gap: 20px; }
+input, select { font-size: 16px; }
+.result { font-size: 15px; }
+}
 </style>
 </head>
 <body>
 
 <!-- ================= FENCING ================= -->
-
-<h1>Fencing Quote Calculators</h1>
+<h1>Fencing Quote Calculator</h1>
 <p class="intro">Click below to view fencing options.</p>
-
 <button class="calc-button" onclick="toggleSection('fencingSection')">View Options</button>
 <div id="fencingSection" style="display:none;">
 <div class="calculators-grid" id="fenceContainer"></div>
@@ -108,28 +59,30 @@ hr { margin:60px 0; }
 <hr>
 
 <!-- ================= GUTTERS ================= -->
-
 <h1>Gutter Services Quote</h1>
 <p class="intro">Click below to view gutter service options.</p>
-
 <button class="calc-button" onclick="toggleSection('gutterSection')">View Options</button>
 <div id="gutterSection" style="display:none;">
 <div class="calculators-grid" id="gutterContainer"></div>
 </div>
 
 <script>
-// ================= TOGGLE FUNCTIONS =================
+// TOGGLE SECTION
 function toggleSection(id){
 const el = document.getElementById(id);
 el.style.display = el.style.display==="block"?"none":"block";
 }
+// TOGGLE CALCULATOR
 function toggleCalculator(id){
 const el = document.getElementById(id);
 el.style.display = el.style.display==="block"?"none":"block";
 }
+// IMAGE MODAL
+function openImage(id){ document.getElementById(id).style.display="block"; }
+function closeImage(el){ el.style.display="none"; }
 
-// ================= FENCING DATA =================
-const fencingData = [
+// ================= FENCING =================
+const fences = [
 {name:"Closeboard Featheredge", img:"/images/closeboard.webp", prices:{4:22,5:27,6:32}},
 {name:"Double Side Hit Miss", img:"/images/double-hit-miss.webp", prices:{4:24,5:29,6:34}},
 {name:"Double Side Concave", img:"/images/concave.webp", prices:{4:25,5:30,6:36}},
@@ -138,13 +91,14 @@ const fencingData = [
 {name:"Single Hit Miss", img:"/images/hit-miss.webp", prices:{4:22,5:27,6:32}}
 ];
 
-// Populate 6 fencing calculators
 const fenceContainer = document.getElementById("fenceContainer");
-fencingData.forEach((f,i)=>{
-const id=i+1;
+fences.forEach((f,i)=>{
+const id = i+1;
 fenceContainer.innerHTML += `
 <div class="calc-container" style="background-image:url('${f.img}')">
 <h3>${f.name}</h3>
+<button class="view-image-button" onclick="openImage('fImg${id}')">View Image</button>
+<div id="fImg${id}" class="image-modal" onclick="closeImage(this)"><img src="${f.img}"></div>
 <button class="calc-button" onclick="toggleCalculator('f${id}')">Get Quote</button>
 <div class="calculator" id="f${id}">
 <label>Length (m)</label>
@@ -155,58 +109,52 @@ fenceContainer.innerHTML += `
 <option value="5">5ft</option>
 <option value="6">6ft</option>
 </select>
-<button class="quote-button" onclick="calcFence(${id})">Generate Quote</button>
-<div class="result" id="fRes${id}">Your quote will appear here.</div>
+<button class="quote-button" onclick="calcFence(${id})">Generate</button>
+<div class="result" id="fRes${id}"></div>
 </div>
-</div>`;
+</div>
+`;
 });
 
-// Fencing calculation
 function calcFence(id){
-let len=parseFloat(document.getElementById("fLen"+id).value);
-if(isNaN(len)||len<=0){document.getElementById("fRes"+id).innerHTML="Enter a valid fence length."; return;}
-let height=document.getElementById("fHeight"+id).value;
-let price=fencingData[id-1].prices[height];
-let total=len*price;
-document.getElementById("fRes"+id).innerHTML = `
-<strong>Total:</strong><h2>£${total.toFixed(2)}</h2>
-<a href="tel:07735873694" style="display:inline-block;margin-top:10px;padding:10px 20px;background:#1e90ff;color:white;border-radius:8px;text-decoration:none;font-weight:600;">Call Now</a>
-`;
+let len = parseFloat(document.getElementById("fLen"+id).value);
+let height = document.getElementById("fHeight"+id).value;
+let price = fences[id-1].prices[height];
+let total = len * price;
+document.getElementById("fRes"+id).innerHTML = `<strong>Total:</strong><h2>£${total.toFixed(2)}</h2><a href="tel:07735873694">Call Now</a>`;
 }
 
-// ================= GUTTER DATA =================
-const gutterData = [
-{name:"Gutter Clearing", img:"/gutter-clearing.webp", rate:4.5},
-{name:"Gutter & Fascia Cleaning", img:"/Cleaned-gutters-before-after.webp", rate:4},
-{name:"Gutter Replacement", img:"/Gutter-alignment.webp", rate:30}
+// ================= GUTTERS =================
+const gutters = [
+{name:"Gutter Clearing (£4.5/m)", img:"/gutter-clearing.webp", rate:4.5},
+{name:"Gutter & Fascia Cleaning (£4/m)", img:"/Cleaned-gutters-before-after.webp", rate:4},
+{name:"Gutter Replacement (£30/m)", img:"/Gutter-alignment.webp", rate:30}
 ];
 
-// Populate 3 gutter calculators
-const gutterContainer=document.getElementById("gutterContainer");
-gutterData.forEach((g,i)=>{
-const id=i+1;
+const gutterContainer = document.getElementById("gutterContainer");
+gutters.forEach((g,i)=>{
+const id = i+1;
 gutterContainer.innerHTML += `
 <div class="calc-container" style="background-image:url('${g.img}')">
-<h3>${g.name} (£${g.rate}/m)</h3>
+<h3>${g.name}</h3>
+<button class="view-image-button" onclick="openImage('gImg${id}')">View Image</button>
+<div id="gImg${id}" class="image-modal" onclick="closeImage(this)"><img src="${g.img}"></div>
 <button class="calc-button" onclick="toggleCalculator('g${id}')">Get Quote</button>
 <div class="calculator" id="g${id}">
 <label>Length (m)</label>
 <input type="number" id="gLen${id}" value="10">
-<button class="quote-button" onclick="calcGutter(${id},${g.rate})">Generate Quote</button>
-<div class="result" id="gRes${id}">Your quote will appear here.</div>
+<button class="quote-button" onclick="calcGutter(${id})">Generate</button>
+<div class="result" id="gRes${id}"></div>
 </div>
-</div>`;
+</div>
+`;
 });
 
-// Gutter calculation
-function calcGutter(id, rate){
-let len=parseFloat(document.getElementById("gLen"+id).value);
-if(isNaN(len)||len<=0){document.getElementById("gRes"+id).innerHTML="Enter a valid length."; return;}
-let total=len*rate;
-document.getElementById("gRes"+id).innerHTML = `
-<strong>Total:</strong><h2>£${total.toFixed(2)}</h2>
-<a href="tel:07735873694" style="display:inline-block;margin-top:10px;padding:10px 20px;background:#1e90ff;color:white;border-radius:8px;text-decoration:none;font-weight:600;">Call Now</a>
-`;
+function calcGutter(id){
+let len = parseFloat(document.getElementById("gLen"+id).value);
+let rate = gutters[id-1].rate;
+let total = len * rate;
+document.getElementById("gRes"+id).innerHTML = `<strong>Total:</strong><h2>£${total.toFixed(2)}</h2><a href="tel:07735873694">Call Now</a>`;
 }
 </script>
 
